# poll-buddy

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: main.cpp
src/static/: style.css
src/templates/: index.html  poll.html  results.html
src/views/: script.js
